<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

<ImageView
    android:layout_width="200dp"
    android:layout_height="150dp"
    android:src="@drawable/logo"
    android:layout_gravity="center"
    android:id="@+id/logo"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/welcome_text"
    android:text="@string/welcome_text"
    android:textStyle="bold"
    android:textSize="30sp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:layout_below="@id/logo"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/account_description_text"
    android:text="@string/user_desc_text"
    android:textAppearance="?android:textAppearanceLarge"
    android:textStyle="bold"
    android:layout_below="@id/welcome_text"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="40dp"
    android:textColor="@android:color/holo_red_dark"/>
 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zoned_datetime"
        android:text="@string/datetime_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Notification.Time"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_below="@id/account_description_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/background_dark"/>
</RelativeLayout>