<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_android"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_marginTop="10dp"
        android:alpha="0.5"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">
       <EditText
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:inputType="number"
           android:enabled="false"
           android:layout_marginBottom="20dp"
           android:id="@+id/mac_address"
           android:textSize="20sp"
           android:textColor="@android:color/white"
           android:textStyle="bold"
           android:textAppearance="@style/TextAppearance.AppCompat.Medium"
           android:background="@color/colorPrimary"
           android:text="@string/text_mac_address" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:focusable="true"
            android:layout_below="@id/mac_address"
            android:id="@+id/button_register"
            android:textSize="20sp"
            android:padding="20dp"
            android:onClick="registerYourself"
            android:background="@android:color/holo_blue_dark"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:autoLink="all"
            android:textColor="@android:color/white"
            android:linksClickable="true"
            android:layout_marginBottom="10dp"
            android:text="@string/text_developer"
            />
</RelativeLayout>